# demod

./: README.md  pyproject.toml
demod/datasets/CREST/: loader.py  utils.py
demod/datasets/RenewablesNinja/: loader.py
demod/simulators/: crest_simulators.py  lighting_simulators.py
docs/source/about/: index.rst
